traces/bug_35.txt
/home/runner/work/42sh-infer/42sh-infer/lib/str/src/internal_lstr_split_helpers.c:33: error: MEMORY_LEAK
  memory dynamically allocated by call to `strdup()` at line 27, column 24 is not reachable after line 33, column 5.
Showing all 10 steps of the trace


/home/runner/work/42sh-infer/42sh-infer/lib/str/src/internal_lstr_split_helpers.c:22:1: start of procedure intern_lstr_split_helper()
20.   }
21.   
22. > vec_t *intern_lstr_split_helper(
23.       const char *this, const char *sep, vec_t *ret, size_t *idx)
24.   {

/home/runner/work/42sh-infer/42sh-infer/lib/str/src/internal_lstr_split_helpers.c:25:5: 
23.       const char *this, const char *sep, vec_t *ret, size_t *idx)
24.   {
25. >     int len = internal_lstr_len_to_substr(this + *idx, sep);
26.       char *to_add =
27.           ((len == -1) ? strdup(this + *idx) : strndup(this + *idx, len));

/home/runner/work/42sh-infer/42sh-infer/lib/str/src/internal_lstr_split_helpers.c:27:11: Condition is true
25.       int len = internal_lstr_len_to_substr(this + *idx, sep);
26.       char *to_add =
27.           ((len == -1) ? strdup(this + *idx) : strndup(this + *idx, len));
                ^
28.       ssize_t size;
29.   

/home/runner/work/42sh-infer/42sh-infer/lib/str/src/internal_lstr_split_helpers.c:27:10: 
25.       int len = internal_lstr_len_to_substr(this + *idx, sep);
26.       char *to_add =
27. >         ((len == -1) ? strdup(this + *idx) : strndup(this + *idx, len));
28.       ssize_t size;
29.   

/home/runner/work/42sh-infer/42sh-infer/lib/str/src/internal_lstr_split_helpers.c:26:5: 
24.   {
25.       int len = internal_lstr_len_to_substr(this + *idx, sep);
26. >     char *to_add =
27.           ((len == -1) ? strdup(this + *idx) : strndup(this + *idx, len));
28.       ssize_t size;

/home/runner/work/42sh-infer/42sh-infer/lib/str/src/internal_lstr_split_helpers.c:30:9: Taking false branch
28.       ssize_t size;
29.   
30.       if (to_add == 0)
              ^
31.           return (0);
32.       *idx += strlen(to_add) + ((len == -1) ? 0 : strlen(sep)) - 1;

/home/runner/work/42sh-infer/42sh-infer/lib/str/src/internal_lstr_split_helpers.c:32:32: Condition is true
30.       if (to_add == 0)
31.           return (0);
32.       *idx += strlen(to_add) + ((len == -1) ? 0 : strlen(sep)) - 1;
                                     ^
33.       size = lvec_push_back(ret, 1, to_add);
34.       return ((size != -1) ? ret : 0);

/home/runner/work/42sh-infer/42sh-infer/lib/str/src/internal_lstr_split_helpers.c:32:31: 
30.       if (to_add == 0)
31.           return (0);
32. >     *idx += strlen(to_add) + ((len == -1) ? 0 : strlen(sep)) - 1;
33.       size = lvec_push_back(ret, 1, to_add);
34.       return ((size != -1) ? ret : 0);

/home/runner/work/42sh-infer/42sh-infer/lib/str/src/internal_lstr_split_helpers.c:32:5: 
30.       if (to_add == 0)
31.           return (0);
32. >     *idx += strlen(to_add) + ((len == -1) ? 0 : strlen(sep)) - 1;
33.       size = lvec_push_back(ret, 1, to_add);
34.       return ((size != -1) ? ret : 0);

/home/runner/work/42sh-infer/42sh-infer/lib/str/src/internal_lstr_split_helpers.c:33:5: Skipping lvec_push_back(): empty list of specs
31.           return (0);
32.       *idx += strlen(to_add) + ((len == -1) ? 0 : strlen(sep)) - 1;
33.       size = lvec_push_back(ret, 1, to_add);
          ^
34.       return ((size != -1) ? ret : 0);
35.   }
